--- a/templates/admin_panel/index.ejs
+++ b/templates/admin_panel/index.ejs
@@ -207,7 +207,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHAdminPanel', thumbnailImgURL: 'vickywang_
         <div class="Grid-cell">
           <div class="element">
             <h3 class="accordion accordionBorderTop noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight">Insight #1 - Enhanced User Management and Transition Handling:</strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight">Insight #1 - Enhanced User Management and Transition Handling:</strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
@@ -217,7 +217,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHAdminPanel', thumbnailImgURL: 'vickywang_
                   </h4>
                   <div class="blankHXS"></div>
                   <div class="Grid-cell">
-                    <img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
+                    <img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
                   </div>
 
                   <h4><strong>A dashboard that displays real-time user statuses (active, inactive, transitioning) with filters for user types (B2B, D2C, guest) and quick actions to modify statuses or view detailed profiles.
@@ -235,7 +235,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHAdminPanel', thumbnailImgURL: 'vickywang_
             </div>
 
             <h3 class="accordion noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Insight #2 - Advanced Data Accessibility for Informed Decision-Making:</strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Insight #2 - Advanced Data Accessibility for Informed Decision-Making:</strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
@@ -245,7 +245,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHAdminPanel', thumbnailImgURL: 'vickywang_
                   </h4>
                   <div class="blankHXS"></div>
                   <div class="Grid-cell">
-                    <img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
+                    <img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
                   </div>
 
                   <h4><strong>A comprehensive analytics section within the admin panel that aggregates data from various sources, offering customizable reports and visualizations to highlight customer behaviors and sales trends.
@@ -260,7 +260,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHAdminPanel', thumbnailImgURL: 'vickywang_
             </div>
 
             <h3 class="accordion noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Insight #3 - Automated Financial Management for Precision and Efficiency:</strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Insight #3 - Automated Financial Management for Precision and Efficiency:</strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
@@ -270,7 +270,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHAdminPanel', thumbnailImgURL: 'vickywang_
                   </h4>
                   <div class="blankHXS"></div>
                   <div class="Grid-cell">
-                    <img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
+                    <img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
                   </div>
                   <h4><strong>Design: A financial module that automates the reconciliation of accounts and transactions, with features for streamlined commission calculations and payment management, and alerts for discrepancies.
                     </strong></h4>
@@ -284,7 +284,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHAdminPanel', thumbnailImgURL: 'vickywang_
             </div>
 
             <h3 class="accordion accordionBorderBottom noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Insight #4 - Comprehensive Sales Tracking and Analysis: </strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Insight #4 - Comprehensive Sales Tracking and Analysis: </strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
@@ -294,7 +294,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHAdminPanel', thumbnailImgURL: 'vickywang_
                   </h4>
                   <div class="blankHXS"></div>
                   <div class="Grid-cell">
-                    <img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
+                    <img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
                   </div>
 
 
@@ -468,7 +468,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHAdminPanel', thumbnailImgURL: 'vickywang_
       <div class="Grid-cell">
         <div class="element">
           <h3 class="accordion accordionBorderTop noMargin withBg">
-            <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #1 - Improved Operational Efficiency: </strong>
+            <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #1 - Improved Operational Efficiency: </strong>
           </h3>
           <div class="accordion-content">
             <div class="Grid Grid--gutters Grid--full">
@@ -482,7 +482,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHAdminPanel', thumbnailImgURL: 'vickywang_
             <div class="blankHXS"></div>
           </div>
           <h3 class="accordion noMargin withBg">
-            <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #2 - Enhanced User Experience: </strong>
+            <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #2 - Enhanced User Experience: </strong>
           </h3>
           <div class="accordion-content">
             <div class="Grid Grid--gutters Grid--full">
@@ -497,7 +497,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHAdminPanel', thumbnailImgURL: 'vickywang_
             <div class="blankHXS"></div>
           </div>
           <h3 class="accordion noMargin withBg">
-            <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #3 - Data-Driven Decision Making: </strong>
+            <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #3 - Data-Driven Decision Making: </strong>
           </h3>
           <div class="accordion-content">
             <div class="Grid Grid--gutters Grid--full">
@@ -514,7 +514,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHAdminPanel', thumbnailImgURL: 'vickywang_
 
 
           <h3 class="accordion noMargin withBg">
-            <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #4 - Streamlined Financial Management: </strong>
+            <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #4 - Streamlined Financial Management: </strong>
           </h3>
           <div class="accordion-content">
             <div class="Grid Grid--gutters Grid--full">
@@ -529,7 +529,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHAdminPanel', thumbnailImgURL: 'vickywang_
           </div>
 
           <h3 class="accordion accordionBorderBottom noMargin withBg">
-            <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #5 - Adaptability to User Needs: </strong>
+            <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #5 - Adaptability to User Needs: </strong>
           </h3>
           <div class="accordion-content">
             <div class="Grid Grid--gutters Grid--full">
