--- a/templates/byp_b2b_SaaS/index.ejs
+++ b/templates/byp_b2b_SaaS/index.ejs
@@ -95,7 +95,7 @@ pageURL:'worksamples/BYP_LH_wsbeebr/', thumbnailImgURL: 'vickywang_web.png'
                 <img class="" src="diagram_userTypes.svg" alt="icon arrow">
 
               </div>
-              <div class="paddingleft">
+              <div class="paddingL fitContenteft">
                 <div class="widthFitContent">
                   <img class="widthXS" src="img_grooming.png" alt="icon arrow">
                 </div>
@@ -112,7 +112,7 @@ pageURL:'worksamples/BYP_LH_wsbeebr/', thumbnailImgURL: 'vickywang_web.png'
                 <h4>About the legacy flow</h4>
                 <h4><strong>Our B2B app, built several years ago, was complex and time-consuming to learn and use. This complexity limited product growth and negatively impacted the user experience. We were moving away from a white-glove service model, our mission was to empower business users with a platform that supports seamless self-onboarding and streamlined service, booking, and team management.</strong></h4>
               </div>
-              <div class="paddingleft">
+              <div class="paddingL fitContenteft">
                 <div class="widthFitContent">
                   <img class="widthXS" src="img_bizOwner.png" alt="icon arrow">
                 </div>
@@ -288,7 +288,7 @@ pageURL:'worksamples/BYP_LH_wsbeebr/', thumbnailImgURL: 'vickywang_web.png'
         <div class="Grid-cell">
           <div class="element">
             <h3 class="accordion accordionBorderTop noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> insight #1 - Streamlined Appointment Management:
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> insight #1 - Streamlined Appointment Management:
               </strong>
             </h3>
             <div class="accordion-content">
@@ -307,7 +307,7 @@ pageURL:'worksamples/BYP_LH_wsbeebr/', thumbnailImgURL: 'vickywang_web.png'
             </div>
 
             <h3 class="accordion noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Insight #2 - Seamless Payment Integration:  </strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Insight #2 - Seamless Payment Integration:  </strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
@@ -326,7 +326,7 @@ pageURL:'worksamples/BYP_LH_wsbeebr/', thumbnailImgURL: 'vickywang_web.png'
             </div>
 
             <h3 class="accordion noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Insight #3 - Efficient Team Management:
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Insight #3 - Efficient Team Management:
               </strong>
             </h3>
             <div class="accordion-content">
@@ -346,7 +346,7 @@ pageURL:'worksamples/BYP_LH_wsbeebr/', thumbnailImgURL: 'vickywang_web.png'
 
 
             <h3 class="accordion accordionBorderBottom noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Insight #4 - Sharing Services with Clients:
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Insight #4 - Sharing Services with Clients:
               </strong>
             </h3>
             <div class="accordion-content">
@@ -504,7 +504,7 @@ pageURL:'worksamples/BYP_LH_wsbeebr/', thumbnailImgURL: 'vickywang_web.png'
           <div class="Grid-cell">
             <div class="element">
               <h3 class="accordion accordionBorderTop noMargin withBg">
-                <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #1 - Improved Operational Efficiency: </strong>
+                <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #1 - Improved Operational Efficiency: </strong>
               </h3>
               <div class="accordion-content">
                 <div class="Grid Grid--gutters Grid--full">
@@ -519,7 +519,7 @@ pageURL:'worksamples/BYP_LH_wsbeebr/', thumbnailImgURL: 'vickywang_web.png'
                 <div class="blankHXS"></div>
               </div>
               <h3 class="accordion noMargin withBg">
-                <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #2 - Enhanced User Experience:</strong>
+                <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #2 - Enhanced User Experience:</strong>
               </h3>
               <div class="accordion-content">
                 <div class="Grid Grid--gutters Grid--full">
@@ -533,7 +533,7 @@ pageURL:'worksamples/BYP_LH_wsbeebr/', thumbnailImgURL: 'vickywang_web.png'
                 <div class="blankHXS"></div>
               </div>
               <h3 class="accordion noMargin withBg">
-                <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #3 - Increased Client Satisfaction:</strong>
+                <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #3 - Increased Client Satisfaction:</strong>
               </h3>
               <div class="accordion-content">
                 <div class="Grid Grid--gutters Grid--full">
@@ -550,7 +550,7 @@ pageURL:'worksamples/BYP_LH_wsbeebr/', thumbnailImgURL: 'vickywang_web.png'
 
 
               <h3 class="accordion accordionBorderBottom noMargin withBg">
-                <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #4 - Boosted Revenue Growth: </strong>
+                <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #4 - Boosted Revenue Growth: </strong>
               </h3>
               <div class="accordion-content">
                 <div class="Grid Grid--gutters Grid--full">
@@ -569,7 +569,7 @@ pageURL:'worksamples/BYP_LH_wsbeebr/', thumbnailImgURL: 'vickywang_web.png'
                 <div class="blankHXS"></div>
               </div>
               <h3 class="accordion accordionBorderBottom noMargin withBg">
-                <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #5 - Competitive Advantage: </strong>
+                <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #5 - Competitive Advantage: </strong>
               </h3>
               <div class="accordion-content">
                 <div class="Grid Grid--gutters Grid--full">
