--- a/templates/byp_b2b_subscription/index.ejs
+++ b/templates/byp_b2b_subscription/index.ejs
@@ -190,7 +190,7 @@ pageURL:'/byp_b2b_subscription/', thumbnailImgURL: 'vickywang_web.png'
         <div class="Grid-cell">
           <div class="element">
             <h3 class="accordion accordionBorderTop noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Focus #1 - User Understanding and Clarity: </strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Focus #1 - User Understanding and Clarity: </strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
@@ -208,7 +208,7 @@ pageURL:'/byp_b2b_subscription/', thumbnailImgURL: 'vickywang_web.png'
             </div>
 
             <h3 class="accordion noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Focus #2 - Ease of Subscription: </strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Focus #2 - Ease of Subscription: </strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
@@ -226,7 +226,7 @@ pageURL:'/byp_b2b_subscription/', thumbnailImgURL: 'vickywang_web.png'
             </div>
 
             <h3 class="accordion noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Focus #3 - Pricing Plan Selection and Presentation: </strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Focus #3 - Pricing Plan Selection and Presentation: </strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
@@ -245,7 +245,7 @@ pageURL:'/byp_b2b_subscription/', thumbnailImgURL: 'vickywang_web.png'
 
 
             <h3 class="accordion accordionBorderBottom noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Focus #4 - Tailored Solutions for Diverse Businesses: </strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Focus #4 - Tailored Solutions for Diverse Businesses: </strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
@@ -295,7 +295,7 @@ pageURL:'/byp_b2b_subscription/', thumbnailImgURL: 'vickywang_web.png'
         <div class="Grid-cell">
           <div class="element">
             <h3 class="accordion accordionBorderTop noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Insight #1 - Streamlining Onboarding to Eliminate Confusion in Pricing Plan Selection </strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Insight #1 - Streamlining Onboarding to Eliminate Confusion in Pricing Plan Selection </strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
@@ -307,7 +307,7 @@ pageURL:'/byp_b2b_subscription/', thumbnailImgURL: 'vickywang_web.png'
               </div>
               <div class="Grid Grid--gutters Grid--full u-textCenter">
                 <div class="Grid-cell">
-                  <img class="iconS paddingXS" src="arrDown.svg" alt="Arrow">
+                  <img class="iconS paddingXS fitContent" src="arrDown.svg" alt="Arrow">
                 </div>
               </div>
               <div class="Grid Grid--gutters Grid--cols-2">
@@ -325,7 +325,7 @@ pageURL:'/byp_b2b_subscription/', thumbnailImgURL: 'vickywang_web.png'
 
 
             <h3 class="accordion noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Insight #2 - Difficulty in Immediate Subscription Activation </strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Insight #2 - Difficulty in Immediate Subscription Activation </strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
@@ -338,7 +338,7 @@ pageURL:'/byp_b2b_subscription/', thumbnailImgURL: 'vickywang_web.png'
               </div>
               <div class="Grid Grid--gutters Grid--full u-textCenter">
                 <div class="Grid-cell">
-                  <img class="iconS paddingXS" src="arrDown.svg" alt="Arrow">
+                  <img class="iconS paddingXS fitContent" src="arrDown.svg" alt="Arrow">
                 </div>
               </div>
               <div class="Grid Grid--gutters Grid--cols-2">
@@ -358,7 +358,7 @@ pageURL:'/byp_b2b_subscription/', thumbnailImgURL: 'vickywang_web.png'
 
 
             <h3 class="accordion accordionBorderBottom noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Insight #3 - Enhancing Subscription Plan Clarity for Varied Business Sizes</strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Insight #3 - Enhancing Subscription Plan Clarity for Varied Business Sizes</strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
@@ -371,7 +371,7 @@ pageURL:'/byp_b2b_subscription/', thumbnailImgURL: 'vickywang_web.png'
               </div>
               <div class="Grid Grid--gutters Grid--full u-textCenter">
                 <div class="Grid-cell">
-                  <img class="iconS paddingXS" src="arrDown.svg" alt="Arrow">
+                  <img class="iconS paddingXS fitContent" src="arrDown.svg" alt="Arrow">
                 </div>
               </div>
               <div class="Grid Grid--gutters Grid--cols-3">
@@ -530,7 +530,7 @@ pageURL:'/byp_b2b_subscription/', thumbnailImgURL: 'vickywang_web.png'
         <div class="Grid-cell">
           <div class="element">
             <h3 class="accordion accordionBorderTop noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #1 - Reduced Onboarding Time, Improved Clarity and Decision-Making </strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #1 - Reduced Onboarding Time, Improved Clarity and Decision-Making </strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
@@ -543,7 +543,7 @@ pageURL:'/byp_b2b_subscription/', thumbnailImgURL: 'vickywang_web.png'
               <div class="blankHXS"></div>
             </div>
             <h3 class="accordion noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #2 - Increase in Onboarding Completion Rates:</strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #2 - Increase in Onboarding Completion Rates:</strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
@@ -556,7 +556,7 @@ pageURL:'/byp_b2b_subscription/', thumbnailImgURL: 'vickywang_web.png'
               <div class="blankHXS"></div>
             </div>
             <h3 class="accordion noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #3 - Uplift in Conversion to Paid Subscriptions:</strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #3 - Uplift in Conversion to Paid Subscriptions:</strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
@@ -571,7 +571,7 @@ pageURL:'/byp_b2b_subscription/', thumbnailImgURL: 'vickywang_web.png'
 
 
             <h3 class="accordion accordionBorderBottom noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #4 - User Satisfaction & Insights-Driven Improvement: </strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #4 - User Satisfaction & Insights-Driven Improvement: </strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
