--- a/templates/glorify/index.ejs
+++ b/templates/glorify/index.ejs
@@ -157,9 +157,9 @@
     </div>
     <!-- Slideshow Title -->
 
-    <div class="paddingM wrapper">
+    <div class="paddingM fitContent wrapper">
       <div class="rowToColumn cardGlorifyBg cardGlorify shadowBox centerVer ">
-        <div class="widthMax paddingM">
+        <div class="widthMax paddingM fitContent">
           <h4>Glorify is a mobile app offering an expansive library of resources designed to aid Christians in their
             spiritual journey. From daily devotionals to scripture readings and prayer guides, the app aims to be a
             one-stop shop for individual spiritual growth. However, while Glorify excels in providing content, it has
@@ -179,7 +179,7 @@
             spiritual growth into a comprehensive resource for collective spiritual well-being.
           </h4>
         </div>
-        <div class="paddingleft">
+        <div class="paddingL fitContenteft">
           <div class=" widthFitContent">
             <div class="audio-container">
               <audio id="myAudio1">
@@ -420,12 +420,12 @@
     <!-- Arrow -->
     <div class="wrapper">
       <div class="Grid Grid--full Grid--gutters">
-        <div class="paddingM">
+        <div class="paddingM fitContent">
           <img class="modal-target" src="Research_Diagram.svg" alt="Desgin Thinking Process">
         </div>
-        <div class="paddingM">
+        <div class="paddingM fitContent">
           <div class="rowToColumn cardGlorify shadowBox centerVer">
-            <div class="widthMax paddingM">
+            <div class="widthMax paddingM fitContent">
               <h4> To address the current lack of social and community features, I am focused on enhancing the user
                 experience by integrating community options.
 
@@ -441,7 +441,7 @@
               <h4>Ultimately, the objective is to enrich the group worship experience, encouraging users to form
                 meaningful connections.</h4>
             </div>
-            <div class="paddingleft">
+            <div class="paddingL fitContenteft">
               <div class="widthFitContent">
                 <div class="audio-container">
                   <audio id="myAudio2">
@@ -531,12 +531,12 @@
       </div>
       <div class="wrapper">
 
-        <div class="paddingM">
+        <div class="paddingM fitContent">
           <img class="modal-target" src="Research_Diagram_Research.svg" alt="Research Process">
         </div>
-        <div class="paddingM">
+        <div class="paddingM fitContent">
           <div class="rowToColumn cardGlorify shadowBox centerVer">
-            <div class="widthMax paddingS">
+            <div class="widthMax paddingS fitContent">
               <h4 class="">The goal is to create the first version of a Christian community on the Glorify
                 platform to boost user
                 engagement. Start by understanding the community: why people join, when they join, their activities,
@@ -544,7 +544,7 @@
                 brainstorm solutions and sketch key concepts for testing, aiming to understand user preferences.
               </h4>
             </div>
-            <div class="paddingleft">
+            <div class="paddingL fitContenteft">
               <div class=" widthFitContent">
                 <div class="audio-container">
                   <audio id="myAudio3">
@@ -1110,7 +1110,7 @@
           <div class="Grid Grid--gutters Grid--cols-2">
             <div class="Grid-cell">
               <div class="element ">
-                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="IconIdea.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Finding 1 - the motivation</strong>
                 </h3>
                 <h4><strong>The participants expressed a range of preferences when it comes to worship styles and
@@ -1131,7 +1131,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="IconIdea.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Finding 2 - the purpose</strong>
                 </h3>
                 <h4><strong>Participants tend to attend <span class="textDecor GLORIFY">small group events more
@@ -1151,7 +1151,7 @@
             <div class="Grid-cell">
               <div class="element ">
 
-                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="IconIdea.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Finding 3 - the difference</strong>
                 </h3>
                 <h4><strong>Older participants often gravitate towards contemplative and introspective worship, while
@@ -1168,7 +1168,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="IconIdea.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Finding 4 - the challenge</strong>
                 </h3>
                 <h4><strong>Participants in group worship often face challenges, especially when it comes to
@@ -1542,7 +1542,7 @@
             <div class="Grid Grid--gutters Grid--cols-2">
               <div class="Grid-cell">
                 <div class="element">
-                  <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
+                  <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="IconIdea.svg" alt="Design">
                     <strong class="colorGLORIFYOrange"> Deepened Community Interaction&#58; </strong>
                   </h3>
                   <p>While the 'Most Rational' category establishes connections and the 'Most Delightful' enhances
@@ -1552,7 +1552,7 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
+                  <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="IconIdea.svg" alt="Design">
                     <strong class="colorGLORIFYOrange"> Unique Offering:&#58; </strong>
                   </h3>
                   <P> While many apps might facilitate sharing of notes, music, or journals, a space designed
@@ -1565,7 +1565,7 @@
             <div class="Grid Grid--gutters Grid--cols-2">
               <div class="Grid-cell">
                 <div class="element">
-                  <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
+                  <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="IconIdea.svg" alt="Design">
                     <strong class="colorGLORIFYOrange">Balanced Approach&#58; </strong>
                   </h3>
                   <p>Being from the 'Darling' category, it strikes a balance between innovation and feasibility. It's
@@ -1576,7 +1576,7 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
+                  <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="IconIdea.svg" alt="Design">
                     <strong class="colorGLORIFYOrange">Future Scalability&#58; </strong>
                   </h3>
                   <P> Once a robust system for group worship/Bible study is established, it can be further expanded or
@@ -2165,12 +2165,12 @@
         </div>
       </div>
       <div class="wrapper">
-        <div class="paddingM">
+        <div class="paddingM fitContent">
           <img class="modal-target" src="Research_Diagram_Design.svg" alt="Design Process">
         </div>
-        <div class="paddingM">
+        <div class="paddingM fitContent">
           <div class="rowToColumn cardGlorify shadowBox centerVer">
-            <div class="widthMax paddingM">
+            <div class="widthMax paddingM fitContent">
               <h4>Based on concept testing, the group prayer option received positive feedback for encouraging open
                 interaction, insight-sharing, and active participation. It's also easy to engage with and low-pressure.
               </h4>
@@ -2180,7 +2180,7 @@
                 workflows to prevent issues later on.
               </h4>
             </div>
-            <div class="paddingleft">
+            <div class="paddingL fitContenteft">
               <div class=" widthFitContent">
                 <div class="audio-container">
                   <audio id="myAudio4">
@@ -2310,7 +2310,7 @@
           <div class="Grid Grid--gutters Grid--cols-3">
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="IconIdea.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Group prayer</strong>
                 </h3>
                 <p>Enhancing the existing prayer feature to support group prayers. </p>
@@ -2324,7 +2324,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="IconIdea.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Chat</strong>
                 </h3>
                 <p>Adding a chat icon to the top navigation </p>
@@ -2341,7 +2341,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element ">
-                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="IconIdea.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Fellowship</strong>
                 </h3>
                 <p>Upgrading the current fellowship profile to facilitate fellowship connections. </p>
@@ -3142,7 +3142,7 @@
 
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconTest.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="IconTest.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Points of Confusion</strong>
                 </h3>
 
@@ -3158,7 +3158,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element ">
-                <h3 class="centerVer"> <img class="iconS paddingXS" src="iconLearn.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="iconLearn.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Recommendations</strong>
                 </h3>
                 <ul>
@@ -3196,13 +3196,13 @@
         </div>
       </div>
       <div class="wrapper">
-        <div class="paddingM">
+        <div class="paddingM fitContent">
           <img class="modal-target " src="Research_Diagram_Iterate.svg" alt="Iterate Process">
         </div>
 
-        <div class="paddingM">
+        <div class="paddingM fitContent">
           <div class="rowToColumn cardGlorify shadowBox centerVer">
-            <div class="widthMax paddingM">
+            <div class="widthMax paddingM fitContent">
               <h4>To reduce the one-minute navigation time for creating and joining group worship, conduct tree testing
                 to streamline the group prayer flow. Ensure the experience is straightforward and seamless.
               </h4>
@@ -3213,7 +3213,7 @@
                 current number of participants in each prayer room.
               </h4>
             </div>
-            <div class="paddingleft">
+            <div class="paddingL fitContenteft">
               <div class=" widthFitContent">
                 <div class="audio-container">
                   <audio id="myAudio5">
@@ -3696,7 +3696,7 @@
 
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconTest.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="IconTest.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Points of Confusion</strong>
                 </h3>
 
@@ -3714,7 +3714,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element ">
-                <h3 class="centerVer"> <img class="iconS paddingXS" src="iconLearn.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="iconLearn.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Recommendations</strong>
                 </h3>
                 <ul>
@@ -3736,7 +3736,7 @@
           <div class="Grid Grid--full Grid--gutters">
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconTest.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="IconTest.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> General Feedback:</strong>
                 </h3>
 
@@ -4203,7 +4203,7 @@
 
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconTest.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="IconTest.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Points of Confusion</strong>
                 </h3>
                 <ul>
@@ -4214,7 +4214,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element ">
-                <h3 class="centerVer"> <img class="iconS paddingXS" src="iconLearn.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="iconLearn.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Recommendations</strong>
                 </h3>
                 <ul>
@@ -4228,7 +4228,7 @@
           <div class="Grid Grid--full Grid--gutters">
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconTest.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="IconTest.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> General Feedback:</strong>
                 </h3>
 
@@ -4267,19 +4267,19 @@
       </div>
       <div class="blankHXS"></div>
       <div class="wrapper">
-        <div class="paddingM">
+        <div class="paddingM fitContent">
           <img class="modal-target " src="Research_Diagram_Enhance.svg" alt="Mind map">
         </div>
 
-        <div class="paddingM">
+        <div class="paddingM fitContent">
           <div class="rowToColumn cardGlorifyBg shadowBox centerVer">
-            <div class="widthMax paddingM">
+            <div class="widthMax paddingM fitContent">
               <h4>The high-fidelity prototype is designed based on user research to address specific needs: fostering
                 shared faith, mutual understanding, support, and opportunities for connection. We'll test and fine-tune
                 these aspects to ensure an effective and engaging user experience.
               </h4>
             </div>
-            <div class="paddingleft">
+            <div class="paddingL fitContenteft">
               <div class=" widthFitContent">
                 <div class="audio-container">
                   <audio id="myAudio6">
@@ -4604,7 +4604,7 @@
 
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="centerVer"> <img class="iconS paddingXS" src="iconGreat.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="iconGreat.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Emotional Impact </strong>
                 </h3>
                 <ul>
@@ -4618,7 +4618,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element ">
-                <h3 class="centerVer"> <img class="iconS paddingXS" src="iconGreat.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="iconGreat.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> User Satisfaction </strong>
                 </h3>
                 <ul>
@@ -4636,7 +4636,7 @@
 
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconTest.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="IconTest.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Points of Confusion</strong>
                 </h3>
                 <ul>
@@ -4648,7 +4648,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element ">
-                <h3 class="centerVer"> <img class="iconS paddingXS" src="iconLearn.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="iconLearn.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Recommendations</strong>
                 </h3>
                 <ul>
@@ -4666,7 +4666,7 @@
           <div class="Grid Grid--full Grid--gutters">
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconTest.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS fitContent" src="IconTest.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> General Feedback:</strong>
                 </h3>
 
@@ -4767,9 +4767,9 @@
               </div>
             </div>
           </div>
-          <div class="paddingM">
+          <div class="paddingM fitContent">
             <div class="rowToColumn cardGlorifyBg shadowBox centerVer">
-              <div class="widthMax paddingM">
+              <div class="widthMax paddingM fitContent">
                 <h4>After working mainly on productivity apps, this is my initial venture into creating Faith-based
                   Community Apps. This project has opened new doors for me into the world of spiritual social
                   networking.
@@ -4787,7 +4787,7 @@
                   improvements.
                 </h4>
               </div>
-              <div class="paddingleft">
+              <div class="paddingL fitContenteft">
                 <div class=" widthFitContent">
                   <div class="audio-container">
                     <audio id="myAudio7">
