--- a/templates/intro/index.ejs
+++ b/templates/intro/index.ejs
@@ -68,8 +68,8 @@
     </ul>
     <div class='carouselIntoNav'>
 
-      <img class="iconL hoverGrey900 paddingXS borderRadiusMax btn prev" title="Left" src="../icon/arrow-back.svg" alt="Arrow Left">
-      <img class="iconL hoverGrey900 paddingXS borderRadiusMax btn next" title="Right" src="../icon/arrow-forward.svg" alt="Arrow Right">
+      <img class="iconL hoverGrey900 paddingXS fitContent borderRadiusMax btn prev" title="Left" src="../icon/arrow-back.svg" alt="Arrow Left">
+      <img class="iconL hoverGrey900 paddingXS fitContent borderRadiusMax btn next" title="Right" src="../icon/arrow-forward.svg" alt="Arrow Right">
 
 
 
