--- a/templates/refining_rx_zero/index.ejs
+++ b/templates/refining_rx_zero/index.ejs
@@ -259,7 +259,7 @@
       <div class="Grid-cell">
         <div class="element">
           <h3 class="accordion accordionBorderTop noMargin withBg">
-            <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Finding #1 Strengthen Trust &
+            <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Finding #1 Strengthen Trust &
               Credibility: </strong>
           </h3>
           <div class="accordion-content">
@@ -279,7 +279,7 @@
                   peace of mind."</h4>
                 <div class="blankHXS"></div>
                 <div class="Grid-cell">
-                  <img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
+                  <img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
                 </div>
                 <h3><strong>Transparency &#183; Positive user reviews &#183; Certifications &#183;
                     Professional design &#183; Affiliations</strong></h3>
@@ -289,7 +289,7 @@
           </div>
 
           <h3 class="accordion noMargin withBg">
-            <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Finding #2 - Value and
+            <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Finding #2 - Value and
               Pricing: </strong>
           </h3>
           <div class="accordion-content">
@@ -308,7 +308,7 @@
                   one platform over another."</h4>
                 <div class="blankHXS"></div>
                 <div class="Grid-cell">
-                  <img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
+                  <img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
                 </div>
 
                 <h3><strong>Implement transparent pricing with no hidden costs.</strong></h3>
@@ -320,7 +320,7 @@
           </div>
 
           <h3 class="accordion noMargin withBg">
-            <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Finding #3 - Clarity &amp;
+            <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Finding #3 - Clarity &amp;
               Challenges & Barriers: </strong>
           </h3>
           <div class="accordion-content">
@@ -338,7 +338,7 @@
                 <div class="blankHXS"></div>
 
                 <div class="Grid-cell">
-                  <img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
+                  <img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
                 </div>
 
                 <h3><strong>Discovering Medications:</strong> medication details, alternatives, and usage
@@ -359,7 +359,7 @@
 
 
           <h3 class="accordion accordionBorderBottom noMargin withBg">
-            <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Finding #4 Support &
+            <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaBw.svg" alt="Insight"> Finding #4 Support &
               Assistance - Human in the loop: </strong>
           </h3>
           <div class="accordion-content">
@@ -376,7 +376,7 @@
                   pharmacies. That's the gold standard." </h4>
 
                 <div class="Grid-cell">
-                  <img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
+                  <img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
                 </div>
 
                 <h3><strong>Discovering Medications:</strong> medication details, alternatives, and usage
@@ -522,7 +522,7 @@
       <div class="Grid-cell">
         <div class="element">
           <h3 class="accordion accordionBorderTop noMargin withBg">
-            <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #1 - Higher
+            <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #1 - Higher
               Subscription Rates and User Satisfaction:</strong>
           </h3>
           <div class="accordion-content">
@@ -539,7 +539,7 @@
             <div class="blankHXS"></div>
           </div>
           <h3 class="accordion noMargin withBg">
-            <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #2 - Enhanced User
+            <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #2 - Enhanced User
               Trust and Confidence:</strong>
           </h3>
           <div class="accordion-content">
@@ -556,7 +556,7 @@
             <div class="blankHXS"></div>
           </div>
           <h3 class="accordion noMargin withBg">
-            <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #3 - Increased
+            <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #3 - Increased
               Accessibility &#38; Affordability:</strong>
           </h3>
           <div class="accordion-content">
@@ -574,7 +574,7 @@
           </div>
 
           <h3 class="accordion accordionBorderBottom noMargin withBg">
-            <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #4 - Streamlined
+            <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #4 - Streamlined
               Operations and Enhanced Efficiency:</strong>
           </h3>
           <div class="accordion-content">
