--- a/templates/savings_calculator/index.ejs
+++ b/templates/savings_calculator/index.ejs
@@ -172,7 +172,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHCost_benefitCalculator/', thumbnailImgURL
       <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell">
           <div class="element">
-            <h2 class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaLASO.svg" alt="Insight"><strong class="colorLASObule700">Insight #1 Transparent & Credibility</strong></h2>
+            <h2 class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaLASO.svg" alt="Insight"><strong class="colorLASObule700">Insight #1 Transparent & Credibility</strong></h2>
             <div class="element">
               <h3> <strong>Calculator results are trustworthy & convincing</strong></h3>
               <h3>1. Ensure that the calculator results are trustworthy and convincing to users. This can be achieved by clearly displaying the sources of pricing information, thereby enhancing the credibility of the results.
@@ -182,7 +182,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHCost_benefitCalculator/', thumbnailImgURL
               <div class="more">
                 <div class="blankHXS"></div>
                 <div class="Grid-cell">
-                  <img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
+                  <img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
                 </div>
                 <h2>Show average market prices data sources. Integration with reliable data sources or APIs for real-time or updated average pricing of traditional medications. </h2>
                 <div class="blankHXS"></div>
@@ -196,7 +196,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHCost_benefitCalculator/', thumbnailImgURL
       <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell">
           <div class="element">
-            <h2 class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaLASO.svg" alt="Insight"><strong class="colorLASObule700">Insight #2 Clarity, Accuracy, and Efficiency</strong></h2>
+            <h2 class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaLASO.svg" alt="Insight"><strong class="colorLASObule700">Insight #2 Clarity, Accuracy, and Efficiency</strong></h2>
             <div class="element">
               <h3> <strong>Understandable Pricing & Medicine Dosage</strong></h3>
               <h3>1. If a certain medication is not available, ensuring clarity and efficiency in their search.</h3>
@@ -208,7 +208,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHCost_benefitCalculator/', thumbnailImgURL
               <div class="more">
                 <div class="blankHXS"></div>
                 <div class="Grid-cell">
-                  <img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
+                  <img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
                 </div>
                 <h2>Gather precise information about the dosage amount per pill and the required number of pills per day for each medication. Ensure that price comparisons are made for equivalent dosages, taking into account both the dosage amount per pill and the daily pill count. </h2>
                 <div class="blankHXS"></div>
@@ -221,7 +221,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHCost_benefitCalculator/', thumbnailImgURL
       <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell">
           <div class="element">
-            <h2 class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconIdeaLASO.svg" alt="Insight"><strong class="colorLASObule700">Insight #3 Value of RX Zero</strong></h2>
+            <h2 class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconIdeaLASO.svg" alt="Insight"><strong class="colorLASObule700">Insight #3 Value of RX Zero</strong></h2>
             <div class="element">
               <h3> <strong>Understand & Trust in RX Zero’s Subscription Model</strong></h3>
               <h3>1. Clearly communicate the benefits of the RX Zero subscription model, including the 30-day refund policy. This should be prominently displayed to reassure users about the flexibility and risk-free nature of trying the service.</h3>
@@ -231,7 +231,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHCost_benefitCalculator/', thumbnailImgURL
               <div class="more">
                 <div class="blankHXS"></div>
                 <div class="Grid-cell">
-                  <img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
+                  <img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/arrDownLASO.svg" alt="Arrow">
                 </div>
                 <h2>Emphasize the Refund Policy - “30-day refund guarantee” & Subscription Flexibility - “cancel anytime”</h2>
                 <div class="blankHXS"></div>
@@ -358,7 +358,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHCost_benefitCalculator/', thumbnailImgURL
         <div class="Grid-cell">
           <div class="element">
             <h3 class="accordion accordionBorderTop noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #1 - Highlighting the Economic Advantage of RX Zero: </strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #1 - Highlighting the Economic Advantage of RX Zero: </strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
@@ -372,7 +372,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHCost_benefitCalculator/', thumbnailImgURL
               <div class="blankHXS"></div>
             </div>
             <h3 class="accordion noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #2 - Enhanced User Trust and Confidence: </strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #2 - Enhanced User Trust and Confidence: </strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
@@ -386,7 +386,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHCost_benefitCalculator/', thumbnailImgURL
               <div class="blankHXS"></div>
             </div>
             <h3 class="accordion accordionBorderBottom noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #3 - Fostering Informed Healthcare Choices:</strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #3 - Fostering Informed Healthcare Choices:</strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
@@ -400,7 +400,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHCost_benefitCalculator/', thumbnailImgURL
               <div class="blankHXS"></div>
             </div>
             <h3 class="accordion noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #4 - Increased Subscription Adoption:</strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #4 - Increased Subscription Adoption:</strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
@@ -415,7 +415,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHCost_benefitCalculator/', thumbnailImgURL
             </div>
 
             <h3 class="accordion noMargin withBg">
-              <strong class="centerVer"><img class="iconS paddingXS" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #5 - Feedback Loop for Continuous Improvement:</strong>
+              <strong class="centerVer"><img class="iconS paddingXS fitContent" src="/worksamples/BYP_LH_wsbeebr/IconTestBw.svg" alt="Insight"> Impact #5 - Feedback Loop for Continuous Improvement:</strong>
             </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--full">
