--- a/templates/shared/comp_audioPlayer.ejs
+++ b/templates/shared/comp_audioPlayer.ejs
@@ -33,7 +33,7 @@
 <div class="Grid-cell">
   <div class="element">
     <div class="rowToColumn <%= audioPlayerBorderColor %> shadowBox centerVer borderRadiusM">
-      <div class="widthMax paddingM">
+      <div class="widthMax paddingM fitContent">
         <h4>
           <strong><%= audioPlayerTextStrong1 %></strong><%= audioPlayerText1 %>
         </h4>
@@ -50,7 +50,7 @@
           <strong><%= audioPlayerTextStrong5 %></strong><%= audioPlayerText5 %>
         </h4>
       </div>
-      <div class="paddingleft">
+      <div class="paddingL fitContenteft">
         <div class=" widthFitContent">
           <div class="audio-container">
             <audio id="myAudio1">
