--- a/templates/shared/comp_clipboardCopy_iconTriger.ejs
+++ b/templates/shared/comp_clipboardCopy_iconTriger.ejs
@@ -11,7 +11,7 @@
       <div class="element">
         <div class="ClipboardBoxIconOnly">
           <button class="ClipboardIconOnly">
-            <img class="iconMax hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard" src="<%- iconUrl %>" alt="LinkedIn">
+            <img class="iconMax hoverGrey100 paddingXL fitContent borderRadiusMax" title="Copy to Clipboard" src="<%- iconUrl %>" alt="LinkedIn">
             <p class="clickIconCopy"><%= copyContent %></p>
           </button>
         </div>
