--- a/templates/shared/comp_titleWeb.ejs
+++ b/templates/shared/comp_titleWeb.ejs
@@ -101,11 +101,11 @@
           </div>
         </div>
         <% if (shareSocialMedia === ``) { %>
-        <div class="paddingleft">
+        <div class="paddingL fitContenteft">
           <div class="element">
             <div class="widthFitContent">
               <div class="dropdownSM">
-                <img title="Share" class="iconS hoverGrey300 paddingM borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
+                <img title="Share" class="iconS hoverGrey300 paddingM fitContent borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
                 <div class="dropdownSM-content">
                   <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me" target="_blank">Share
                     on LinkedIn</a>
