--- a/templates/shared/homePage_icons-buttons.ejs
+++ b/templates/shared/homePage_icons-buttons.ejs
@@ -5,7 +5,7 @@
     <div class="Grid-cell">
       <div class="ClipboardBoxIconOnly">
         <button class="ClipboardIconOnly">
-          <img title="Copy Email to Clipboard" class="iconM hoverGrey300 paddingMax borderRadiusMax"
+          <img title="Copy Email to Clipboard" class="iconM hoverGrey300 paddingM fitContentax borderRadiusMax"
             src="./icon/mail.svg" alt="LinkedIn">
           <p class="clickIconCopy">vickyw.design@gmail.com</p>
         </button>
@@ -14,24 +14,24 @@
     </div>
     <div class="Grid-cell">
       <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank" title="LinkedIn">
-        <img class="iconM hoverGrey300 paddingMax borderRadiusMax borderRadiusS" src="./icon/in.svg" alt="LinkedIn">
+        <img class="iconM hoverGrey300 paddingM fitContentax borderRadiusMax borderRadiusS" src="./icon/in.svg" alt="LinkedIn">
       </a>
     </div>
 
     <div class="Grid-cell">
       <a href="https://github.com/vicky-wyq" target="_blank" title="GitHub">
-        <img class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/git.svg" alt="GitHub">
+        <img class="iconM hoverGrey300 paddingM fitContentax borderRadiusMax" src="./icon/git.svg" alt="GitHub">
       </a>
     </div>
     <div class="Grid-cell">
       <a href="https://codepen.io/vicky-wyq" target="_blank" title="CodePen">
-        <img class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
+        <img class="iconM hoverGrey300 paddingM fitContentax borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
       </a>
     </div>
 
     <div class="Grid-cell">
       <a href="https://www.instagram.com/vw_yiqi/" target="_blank" title="Instagram">
-        <img class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/ins.svg" alt="Instagram">
+        <img class="iconM hoverGrey300 paddingM fitContentax borderRadiusMax" src="./icon/ins.svg" alt="Instagram">
       </a>
     </div>
 
