--- a/templates/architecture/index.ejs
+++ b/templates/architecture/index.ejs
@@ -44,7 +44,7 @@
       <div class="element">
         <div class="ClipboardBoxIconOnly">
           <button class="ClipboardIconOnly">
-            <img class="iconM hoverGrey100 paddingMax borderRadiusMax" title="Copy Email Address to Clipboard" src="/icon/copy.svg">
+            <img class="iconM hoverGrey100 paddingM fitContentax borderRadiusMax" title="Copy Email Address to Clipboard" src="/icon/copy.svg">
             <p class="clickIconCopy">vickyw.design@gmail.com
             </p>
           </button>
